--- a/crates/offline/nllb/Cargo.toml
+++ b/crates/offline/nllb/Cargo.toml
@@ -12,3 +12,7 @@ base-util = { workspace = true, default-features = false }
 maplit.workspace = true
 env_logger.workspace = true
 anyhow.workspace = true
+async-trait.workspace = true
+
+[dev-dependencies]
+tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
